[package]
name = "jumpwire-example-crud-api-staff"
version = "0.1.0"
edition = "2021"

[package.metadata.lambda.env]
RUST_LOG = "info"


# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
aws_lambda_events = { version = "0.6.3", default-features = false, features = ["apigw"] }
flate2 = "1.0.24"
handlebars = "4.3.3"
lambda_http = "0.5.2"
log = "0.4.17"
postgres = "0.19.3"
serde = "1.0.139"
serde_json = "1.0.82"
tokio = { version = "1", features = ["macros"] }
tokio-postgres = "0.7.6"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }


